# nginx-proxy-manger-host-py-wrapper

./: .gitignore  MANIFEST.in  README.md  README_CLIENT.md  SSL_SETTINGS_FIX.md  full_example.py  pyproject.toml  quick_start.py
examples/: quick_start.py
nginx_proxy_manager_client/: __init__.py  npm_client.py  npm_client_fixed.py
