[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nginx-proxy-manager-client"
version = "1.0.0"
description = "A Python client library for Nginx Proxy Manager API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["nginx", "proxy", "manager", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0"
]

[tool.setuptools]
packages = ["nginx_proxy_manager_client"]

[tool.setuptools.package-data]
nginx_proxy_manager_client = ["*.py"]

[project.urls]
Homepage = "https://github.com/yourusername/nginx-proxy-manager-client"
